fixtures/frontend/milestone-1/invalid/cluster_unfinished_gate.aivi
type UserDraft = UserDraft Text Text

sig nameText = "Ada"
sig emailText = "ada@example.com"

sig brokenDraft =
 &|> nameText
 &|> emailText
  ?|> .ready
   |> UserDraft
